# go1_autonomy

./: .gitignore  CMakeLists.txt  README.md  manifest.xml
amrl_msgs/msg_gen/cpp/include/amrl_msgs/: AckermannCurvatureDriveMsg.h  ColoredArc2D.h  ColoredLine2D.h  ColoredPoint2D.h  ElevatorCommand.h  ElevatorStatus.h  ErrorReport.h  HumanStateArrayMsg.h  HumanStateMsg.h  Localization2DMsg.h  PathVisualization.h  PlanarObjDetection.h  Point2D.h  Pose2Df.h  RobofleetStatus.h  RobofleetSubscription.h  VisualizationMsg.h
amrl_msgs/msg_gen/lisp/: VisualizationMsg.lisp  _package.lisp  amrl_msgs-msg.asd
amrl_msgs/src/amrl_msgs/msg/: _HumanStateArrayMsg.py  _VisualizationMsg.py  __init__.py
amrl_msgs/src/amrl_msgs/srv/: _SocialPipsSrv.py  __init__.py
amrl_msgs/srv_gen/cpp/include/amrl_msgs/: SocialPipsSrv.h
amrl_msgs/srv_gen/lisp/: _package.lisp  amrl_msgs-srv.asd
config/: a1_2d_costmap.yaml  a1_cloud_costmap.yaml  cloud2scan.lua  go1.lua  navigation.lua
config/old/: enml.lua  hsrb_gazebo.lua
enml/src/: non_markov_localization_main_go1.cpp  non_markov_localization_main_go1_daq.cpp
graph_navigation/src/navigation/: ackermann_motion_primitives.cc  navigation_main_go1.cc
launch/: a1_robot.launch  a1_tf_tree.launch  a1_vision.launch  go1-enml-gn.launch  go1_robot.launch  go1_tf_tree.launch  go1_vision.launch  map_launch.launch
launch/old/: a1-950_enml.launch  pointcloud2laser.launch  pointcloud2laser_high_beams.launch  pointcloud2laser_nodelet.launch  pointcloud2laser_nodelet_high_beams.launch  start_all.launch  velodyne.launch
path_manager_server/: CMakeLists.txt  package.xml
path_manager_server/action/: PathManager.action
path_manager_server/launch/: a1_path_localization_mgr.launch
path_manager_server/scripts/: path_manager.py  path_manager_client.py  paths.yaml
pointcloud_to_laserscan/: pointcloud_to_laserscan_main.cc
src/go1_autonomy/srv/: _graphNavSrv.py  _socialNavSrv.py
srv_gen/cpp/include/go1_autonomy/: graphNavSrv.h  socialNavSrv.h
srv_gen/lisp/: _package.lisp  _package_graphNavSrv.lisp  _package_socialNavSrv.lisp  go1_autonomy-srv.asd  graphNavSrv.lisp  socialNavSrv.lisp
unitree_ros/robots/go1_description/xacro/: robot_sensors.xacro
unitree_ros/unitree_legged_real/: CMakeLists.txt  ipconfig.sh
unitree_ros/unitree_legged_real/src/: go1_cmd_convert.cc
unitree_ros/unitree_navigation/config/: global_costmap_params.yaml  local_costmap_params.yaml
vectormaps/AHG_Apartment/: AHG_Apartment.navigation.json
vectormaps/AHG_Apartment_temp/: AHG_Apartment_temp.copy.vectormap.txt  AHG_Apartment_temp.navigation.json
vectormaps/YMCA0/: YMCA0.navigation.json  YMCA0.vectormap.txt
